--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "in search for a memory leak",
   "main": "index.js",
   "scripts": {
+    "start": "tsc && node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "sharp": "^0.25.2",
+    "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "@types/node": "^12.12.31"
+  }
 }
